app/static/assets/css/stylesheet.css
/* ... */
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 10px 0;
  font-weight: 700;
  letter-spacing: -1px;
}

h1 {
  font-size: 40px;
  font-weight: 700;
}

h2 {
  padding-bottom: 0;
  margin-bottom: 20px;
  font-size: 32px;
  border-bottom: 2px dotted #CCCCCC;
}

h3 {
  font-size: 24px;
  font-family: "Roboto", Arial, sans-serif;
}

h4 {
  font-size: 21px;
  font-family: "Roboto", Arial, sans-serif;
}

h5 {
  font-size: 18px;
}

h6 {
  font-size: 16px;
}

p {
  margin: 10px 0 15px 0;
}

footer p {
  color: #f2f2f2;
  font-size: 12px;
}

a.email-us-link {
  color: rgb(63, 63, 224);
}

footer a {
  color: white;
}

footer a:active, footer a:hover {
  color: white;
  text-decoration: underline;
}

em {
  font-style: italic;
}

strong {
  font-weight: bold;
}

p img {
  display: inline;
  margin: 0;
  padding: 0;
  vertical-align: middle;
  text-align: center;
  border: none;
}

blockquote {
  color: #666;
  margin-bottom: 20px;
  padding: 0 0 0 20px;
  border-left: 3px solid #bbb;
}

ul {
  list-style-position: outside;
  list-style-position: disc;
  margin-bottom: 15px;
  padding-left: 20px;
}

ol {
  list-style-position: inside;
  list-style-position: decimal;
  margin-bottom: 15px;
  padding-left: 20px;
}

hr {
  height: 1px;
  margin-bottom: 5px;
  border: none;
  background: url('../images/bg_hr.png') repeat-x center;
}

th {
  font-family: "Capriola", "Roboto", Arial, sans-serif;
  padding: 10px;
  background: #373737;
  color: #fff;
}

td {
  padding: 10px;
  border: 1px solid #373737;
}

form {
  padding: 20px;
}

/*******************************************************************************
Full-Width Styles
*******************************************************************************/

.outer {
  width: 100%;
}

.inner {
  position: relative;
  padding: 20px 10px;
  margin: 0 auto;
}

.main-content {
  box-sizing: border-box;
  clear: both;
  margin: 0 auto;
  padding-bottom: 20px;
  position: relative;
  width: 67%;
}

.row:before,
.row:after {
  content: "";
  display: table;
  clear: both;
}

.column {
  display: block;
  float: left;
}

.oppia-foundation-blockquote {
  border: 0;
  color: black;
  margin: 0;
  padding: 0;
}

.oppia-foundation-clearfix {
  overflow: auto;
  zoom: 1;
}

.oppia-foundation-no-margin {
  margin: 0;
}

.oppia-foundation-no-margin-top {
  margin-top :0;
}

.oppia-foundation-no-padding {
  padding :0;
}

.oppia-foundation-no-horizontal-padding {
  padding-left: 0;
  padding-right: 0;
}

.oppia-foundation-button-horizontal-padding {
  padding-left: 20px;
  padding-right: 20px;
}

.oppia-foundation-right-padding {
  padding-right: 40px;
}

.oppia-foundation-horizontal-padding {
  padding-left: 40px;
  padding-right: 40px;
}

@media screen and (min-width: 599px) {
  .oppia-foundation-tablet-and-desktop-horizontal-padding {
    padding-left: 40px;
    padding-right: 40px;
  }
  .oppia-foundation-tablet-and-desktop-vertical-padding {
    padding-top: 80px;
    padding-bottom: 80px;
  }
  .oppia-foundation-tablet-and-desktop-top-padding {
    padding-top: 80px;
  }
  .oppia-foundation-tablet-and-destop-bottom-padding-40 {
    padding-bottom: 40px;
  }
}

.oppia-foundation-top-padding {
  padding-top: 80px;
}

.oppia-foundation-vertical-padding {
  padding-top: 80px;
  padding-bottom: 80px;
}

.oppia-foundation-margin-bottom-20 {
  margin-bottom: 20px;
}

.oppia-foundation-margin-bottom-40 {
  margin-bottom: 40px;
}

@media screen and (max-width: 1279px) {
  .oppia-foundation-mobile-and-tablet-horizontal-padding {
    padding-left: 40px;
    padding-right: 40px;
  }
  .oppia-foundation-mobile-and-tablet-vertical-padding {
    padding-top: 80px;
    padding-bottom: 80px;
  }
  .oppia-foundation-mobile-and-tablet-top-padding {
    padding-top: 80px;
  }
  .oppia-foundation-mobile-and-tablet-top-padding-60 {
    padding-top: 60px;
  }
  .oppia-foundation-mobile-and-tablet-top-padding-40 {
    padding-top: 40px;
  }
  .oppia-foundation-mobile-and-tablet-bottom-padding {
    padding-bottom: 80px;
  }
  .oppia-foundation-mobile-and-tablet-bottom-padding-60 {
    padding-bottom: 60px;
  }
  .oppia-foundation-mobile-and-tablet-bottom-padding-40 {
    padding-bottom: 40px;
  }
  .oppia-foundation-tablet-and-desktop-right-padding {
    padding-right: 40px;
  }
  .oppia-foundation-mobile-and-tablet-vertical-padding-20 {
    padding-top: 20px;
    padding-bottom: 20px;
  }
  .oppia-foundation-mobile-and-tablet-vertical-padding-40 {
    padding-top: 40px;
    padding-bottom: 40px;
  }
  .oppia-foundation-mobile-and-tablet-margin-bottom-20 {
    margin-bottom: 20px;
  }
}
@media screen and (min-width: 960px) {
  .oppia-foundation-small-tablet-and-desktop-vertical-padding {
    padding-top: 80px;
    padding-bottom: 80px;
  }
  .oppia-foundation-small-tablet-and-desktop-top-padding {
    padding-top: 80px;
  }
  .oppia-foundation-small-tablet-and-desktop-right-padding {
    padding-right: 40px;
  }
  .oppia-foundation-small-tablet-and-desktop-right-margin {
    margin-right: 40px;
  }
}
@media screen and (max-width: 960px) {
  .oppia-foundation-mobile-and-small-tablet-vertical-padding {
    padding-top: 80px;
    padding-bottom: 80px;
  }
  .oppia-foundation-mobile-and-small-tablet-vertical-padding-40 {
    padding-top: 40px;
    padding-bottom: 40px;
  }
  .oppia-foundation-mobile-and-small-tablet-top-padding-40 {
    padding-top: 40px;
  }
  .oppia-foundation-mobile-and-small-tablet-top-padding-60 {
    padding-top: 60px;
  }
  .oppia-foundation-mobile-and-small-tablet-top-padding {
    padding-top: 80px;
  }
  .oppia-foundation-mobile-and-small-tablet-bottom-padding-40 {
    padding-bottom: 40px;
  }
  .oppia-foundation-mobile-and-small-tablet-bottom-padding-60 {
    padding-bottom: 60px;
  }
  .oppia-foundation-mobile-and-small-tablet-bottom-padding {
    padding-bottom: 80px;
  }
}
/* ... */

